# realistic_machine_learning

./: README.md  pyproject.toml
notes/: external_sources.md
